--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>movie-paradise-view</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Movie Paradise</title>
+    <meta name="description" content="Your ultimate movie review platform" />
+    <meta name="author" content="Movie Paradise" />
 
-    <meta property="og:title" content="movie-paradise-view" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Movie Paradise" />
+    <meta property="og:description" content="Your ultimate movie review platform" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@moviesparadise" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
